deployment/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulations-staging
spec:
  selector:
    matchLabels:
      app: simulations
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: simulations
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/simulations:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /prometheus-client
          name: prometheus-client
        command: ["gunicorn", "-c", "gunicorn.py", "simulations.wsgi:app"]
        readinessProbe:
          httpGet:
            path: /simulations/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "4000m"
      volumes:
      - name: prometheus-client
        emptyDir: {}
