deployment/staging/service.yml
kind: Service
apiVersion: v1
metadata:
  name: simulations-staging
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/simulations/metrics"
spec:
  selector:
    app: simulations
    env: staging
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8000
